--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,5 +2,5 @@
 <p> <%= @post.body%><p/>
 <hr>
 <%=link_to "Редактировать", edit_post_path(@post), :class => 'btn btn-warning'%>
-<%=link_to "Удалить Пост", post_path(@post),method: :delete, data: {turbo_method: :delete, Turbo_confirm: "Точно хотите удалить статью?"}, :class => 'btn btn-danger'%>
+<%=button_to "Удалить Пост", post_path(@post), method: :delete,  confirm: 'Are you sure?', :class => 'btn btn-danger'%>
 <!-- <input  type = 'submit' value = "Delete"><<#%= @post.destroy %>> </input/> -->
