--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,4 +2,30 @@
 <p> <%= @post.body%><p/>
 <hr>
 <%=link_to "Редактировать", edit_post_path(@post), class: 'btn btn-secondary'%>
-<%=link_to "Delete", post_path(@post), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger'%>
+<%=button_to "Удалить Пост", post_path(@post), method: :delete,  form: {data: {turbo_confirm: 'Are you sure?'}}, :class => 'btn btn-danger'%>
+<hr>
+
+<h2>Все комеетарии </h2>
+<% @post.comments.each do |comment|%>
+<div class="allert">
+
+  <p><strong><%= comment.username %></strong>:<%= comment.body %> </p>
+  </div>
+  <% end %>
+<hr>
+<h2> добавление комментраия </h2>
+<%= form_for ([@post, @post.comments.build]) do |f| %>
+
+<p>
+  Пользователь<br>
+    <%= f.text_field :username, {class:'form-control'}%>
+<p/>
+<p>
+  добавьте коментарий<br>
+  <%= f.text_area:body, {class: 'form-control'}%>
+</p>
+<p>
+  <%= f.submit 'оставить комеент', {:class=> 'btn-btn-succes'}%>
+</p>
+
+<%end%>
